public/main.css
body {
  font-family: 'Nunito', serif;
  min-height: 100vh;
}

/********** Navigation ************/
#logo {
  height: 60px;
}

#background-image {
  opacity: .4;
  position: fixed;
  z-index: -1;
}

#navigation-container {
  position: fixed;
  width: 100%;
  background-color: rgba(255,255,255,0.90);
  z-index: 1;
  top: 0;
}

.right-nav-container {
  float: right;
  margin: 30px 15px 15px;
}

.left-nav-container {
  float: left;
  margin: 10px 0 1px 10px;
}

.nav-link {
  color: green;
  font-size: 15px;
  text-align: right;
  padding: 0px 10px;
}

a:hover,
a:visited,
a:link,
a:active {
  text-decoration: none;
  color: green;
}

/********** index.html ************/

#welcome-message-container {
  display: inline-block;
  margin-top: 50px;
  padding: 25px;
}

.welcome-quote {
  text-align: center;
  color: green;
  font-size: 50px;
  margin: 45px 0px 45px;
}

.welcome-message {
  font-size: 20px;
  line-height: 130%;
  text-align: center;
  color: black;
  margin: 5px;
  font-family: 'Indie Flower', cursive;
}

#what-to-do {
  background-color: #c78262;
  padding-bottom: 5px;
  width: 75%;
  margin: auto;
  border-radius: 3px;
  text-align: center;
}

#what-to-do > p {
  padding-top: 25px;
  font-size: 19px;
}

#welcome-list {
  font-size: 15px;
  color: black;
  list-style-type: none;
  margin: 8px 0px 20px;
  padding: 5px;
}

#welcome-list >li {
  list-style-type: none;
  padding: 10px 15px;
}

#profile-forms-container {
  display: flex;
  justify-content: space-around;
  background-color: rgba(255,255,255,0.80);
  padding: 50px 35px 100px;
  margin-top: 50px;
}

fieldset {
  border-radius: 4px;
  padding-top: 15px;
}

fieldset p {
  margin-left: 15px;
}

#new-user, #existingUser, .search-button, .submit-button, .edit-button, .delete-button  {
  border: 1px solid black;
  border-radius: 3px;
  font-size: 15px;
  display: block;
  margin: 15px 0px;
  padding: 4px 10px;
}

input {
  /* background-color: #E8E8E8; */
  border: 1px solid #DBDBDB;
  border-radius: 4px;
}

/********** results.html ************/

#page-display-container, #page-display-container-2  {
  display: inline-block;
  margin: 90px 20px;
  padding: 25px;
  background-color: white;
}

/* #form-container {
background-color: #FFCF9E;
} */

#search-selection {
  margin-bottom: -15px;
  text-align: center;
}

#search-selection label {
  margin-right: 15px;
}

#search-details label {
  margin-top: 10px;
  display: inline-block;
}

#search-loc, #search-data {
  border: 1px solid #DBDBDB;
  border-radius: 4px;
  font-size: 15px;
  margin: 5px 0px;
  padding: 4px;
}

#search-data::placeholder , #search-loc::placeholder {
  color: #E0E0E0;
  font-size: 12px;
}

.search-button {
    margin: 20px auto;
}

#search-results-card {
  margin-top: 25px;
}

h5, h6 {
  margin: 0;
}

/********** createPost.html ************/

/* #page-display-container-2 {
  display: inline-block;
  margin: 90px 20px;
  padding: 25px;
  background-color: white;
} */

#swapPosting-have, #swapPosting-want {
  border: 1px solid #DBDBDB;
  border-radius: 4px;
  font-size: 15px;
  margin: 15px 0 5px;
  padding: 8px;
}

/* need to set a margin on the label still */

#swapPosting-have::placeholder , #swapPosting-want::placeholder {
  /* color: #E0E0E0; */
  color: #E0E0E0;
  font-size: 12px;
  padding: 5px;
}

.submit-button {
  margin: 20px auto;
}

#user-post-listing-container {
  text-align: center;
  width: 75%
}

#user-post-listing-container h2 {
    margin-top: 65px;
}

.individual-list-card {
  margin-bottom: 25px;
}

.active-swap-listing {
  list-style-type: none;
  color: orange;
  max-width: 20ch;
  overflow: hidden;
  white-space: nowrap;
}

.edit-button, .delete-button {
 display: inline-block;
 margin: 10px;
 font-size: 12px;
}

